--- a/.gitignore
+++ b/.gitignore
@@ -236,6 +236,7 @@ fabric.properties
 .idea/httpRequests
 
 # Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
+.idea/
 .DS_Store
 /customer_analysis/
+/customer_analysis.zip
